feature: add PicClientID to PO requests and responses
